--- a/views/addapikey.ejs
+++ b/views/addapikey.ejs
@@ -134,6 +134,7 @@ button[id="add"]:hover {
     <h1><%= cloudname %></h1>
     <h2 class="subtitle">Add API key </h2>
     <form action="/addapikey/" method="post">
+        <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
         <label for="name"><span class="material-icons">api</span>&nbsp;API key name</label>
         <input type="text" id="name" name="name" required></input>
         <button type="submit" id="add"><span class="material-icons">add</span>&nbsp;Add API key</button>
