--- a/views/delrole.ejs
+++ b/views/delrole.ejs
@@ -120,6 +120,7 @@ select {
     <h1><%= cloudname %></h1>
     <h2 class="subtitle">Delete role </h2>
     <form action="/delrole/" method="post">
+    <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
     <select name="role">
         <% for (let role of roles) { %>
             <option value=<%= role.name %>><%= role.name %> | <%= role.maxStorage %> MB</option>
