--- a/views/editrole.ejs
+++ b/views/editrole.ejs
@@ -120,6 +120,7 @@ select {
     <h1><%= cloudname %></h1>
     <h2 class="subtitle">Change role for <%= user %></h2>
     <form action=<%= "/editrole/" + user %> method="post">
+    <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
     <select name="role">
         <% for (let role of roles) { %>
             <option value=<%= role.name %>><%= role.name %> | <%= role.maxStorage %> MB</option>
