--- a/views/rename.ejs
+++ b/views/rename.ejs
@@ -134,6 +134,7 @@ button[id="rename"]:hover {
     <h2 class="subtitle">Rename <%= file %> </h2>
     <% let renameurl =  "/rename/" + file%> 
     <form action=<%= renameurl %> method="post">
+        <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
         <label for="newname"><span class="material-icons">edit</span>&nbsp;New name</label>
         <input type="text", id="newname", name="newname" required></input>
         <button type="submit" id="rename"><span class="material-icons">edit</span>&nbsp;Rename</button>
